--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -43,3 +43,6 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/UeControllerExample.TimerActor.TimerFinsish",NewName="/Script/UeControllerExample.TimerActor.TimerFinish")
